// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Audio only Audio only 1`] = `
Sha256 {
  "_a": 852324853,
  "_b": 900061558,
  "_block": {
    "data": [
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": -77119108,
  "_d": 649372279,
  "_e": 1338155367,
  "_f": -1070614531,
  "_finalSize": 56,
  "_g": 179281048,
  "_h": -1662914162,
  "_len": 1548525,
  "_w": [
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    1076538024,
    1076538024,
    1074864824,
    1074864824,
    -182768576,
    -182768576,
    865411811,
    -921361695,
    178330348,
    176492780,
    -2087738290,
    -1260804374,
    -1325468685,
    -1334857003,
    102107665,
    -694727818,
    19526121,
    1086749015,
    -337589627,
    955973414,
    1980563049,
    -1537712342,
    2098823597,
    -1902999238,
    -639461841,
    1885657292,
    -2135474814,
    1875715073,
    545314243,
    74402475,
    714922509,
    -1428617055,
    -1599539767,
    -1963544693,
    -1261772506,
    -1085687255,
    -48227931,
    -291123254,
    -28480751,
    1852269705,
    512616480,
    1584719614,
    -818213677,
    331778726,
    2065100065,
    -1069164473,
    1482002331,
    -626515563,
  ],
}
`;

exports[`Audio only Audio only 2`] = `
Sha256 {
  "_a": 783152863,
  "_b": 424620667,
  "_block": {
    "data": [
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
      85,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": -79128835,
  "_d": -1630018019,
  "_e": 1008901675,
  "_f": -758373307,
  "_finalSize": 56,
  "_g": -1966819272,
  "_h": -84315883,
  "_len": 4926285,
  "_w": [
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    -1609214636,
    -1609214636,
    -1607941796,
    -1607941796,
    414043680,
    414043680,
    -19782609,
    1234314286,
    1097708600,
    1096021368,
    1465835516,
    -413403832,
    393015229,
    -844003180,
    2120859960,
    1950762142,
    -1574593190,
    2135456813,
    -1580882824,
    433018846,
    2108125402,
    -1588172068,
    -1507036111,
    -109653929,
    2070177348,
    -621581400,
    -1583705034,
    -2134428910,
    595697251,
    53023419,
    404586609,
    1628120751,
    929460766,
    -1528674682,
    -2067018124,
    277148752,
    1468378495,
    144692897,
    1862731056,
    -529588229,
    309224842,
    -1468554783,
    -1435623010,
    -1562126978,
    868565422,
    -2087181620,
    -1664910832,
    782127982,
  ],
}
`;

exports[`Combined 4K Blender film 1`] = `
Sha256 {
  "_a": -836547752,
  "_b": 1729348943,
  "_block": {
    "data": [
      46,
      50,
      55,
      46,
      49,
      48,
      48,
      0,
      0,
      109,
      100,
      105,
      114,
      97,
      112,
      112,
      108,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      45,
      105,
      108,
      115,
      116,
      0,
      0,
      0,
      37,
      169,
      116,
      111,
      111,
      0,
      0,
      0,
      29,
      100,
      97,
      116,
      97,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      76,
      97,
      118,
      102,
      53,
      57,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 2099307561,
  "_d": 1771698358,
  "_e": 1274426792,
  "_f": -634911975,
  "_finalSize": 56,
  "_g": -87227411,
  "_h": -1046644516,
  "_len": 1373174599,
  "_w": [
    1912602624,
    0,
    7169129,
    1918988400,
    1811939328,
    0,
    0,
    2976108,
    1936982016,
    2468212,
    1869545472,
    1926241,
    1952514048,
    65536,
    19553,
    1986409785,
    -1579005561,
    -693353776,
    555423135,
    -1658690045,
    1416966763,
    2145862157,
    942869285,
    -101641809,
    -1317897950,
    -1722784656,
    457608783,
    -511204993,
    -885972107,
    771014996,
    -1589230054,
    -1451031894,
    -756684667,
    -769405138,
    -651652938,
    -1755947438,
    -1570346352,
    -1783390597,
    -561043170,
    1454560838,
    -533337666,
    -482026396,
    135893267,
    866221552,
    -113303504,
    1320930955,
    -320662272,
    -1810346151,
    1383179012,
    1532712026,
    319885415,
    15882163,
    -1654531480,
    -806232769,
    2096113833,
    -1713780060,
    799479529,
    365844854,
    740140629,
    1869461545,
    503648309,
    263968795,
    1666574749,
    -990367016,
  ],
}
`;

exports[`Combined Video/Audio sync 1`] = `
Sha256 {
  "_a": -871051918,
  "_b": 1530161784,
  "_block": {
    "data": [
      139,
      200,
      90,
      179,
      64,
      0,
      0,
      0,
      0,
      3,
      126,
      50,
      12,
      0,
      0,
      0,
      4,
      126,
      52,
      220,
      0,
      0,
      0,
      0,
      3,
      126,
      50,
      12,
      126,
      52,
      220,
      0,
      199,
      118,
      54,
      142,
      22,
      200,
      58,
      12,
      100,
      96,
      163,
      180,
      129,
      27,
      88,
      0,
      134,
      1,
      0,
      146,
      156,
      0,
      78,
      129,
      128,
      2,
      192,
      39,
      198,
      255,
      27,
      140,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": -2146839396,
  "_d": 1190744244,
  "_e": 1200501677,
  "_f": 590552212,
  "_finalSize": 56,
  "_g": -1121450524,
  "_h": -1795717790,
  "_len": 2299808,
  "_w": [
    1062051384,
    1887506891,
    803349440,
    5000069,
    -555628710,
    -1718227347,
    1124806667,
    79745194,
    -948554098,
    382220812,
    1684054964,
    -2128914432,
    -2046754670,
    -1677701503,
    -2147303385,
    -956359796,
    1792083247,
    1354466732,
    1812904487,
    410789279,
    -1194762633,
    -2097627281,
    -274694331,
    1087373382,
    1562046716,
    -809722674,
    1786063579,
    -1919251688,
    1010725772,
    -1888043738,
    -2143517846,
    -1074614115,
    -1067264826,
    -1217178011,
    1590534318,
    -964451859,
    -1927906911,
    841642832,
    669323989,
    -936908912,
    -484217094,
    784287741,
    -1912473335,
    -388472917,
    631830173,
    -1051469633,
    782214116,
    1531681589,
    482423795,
    1135598719,
    843899115,
    -828523679,
    1975768253,
    -1245728083,
    -713714710,
    1177793233,
    -788097336,
    -1932685458,
    1397303532,
    -663822504,
    510609347,
    1890752978,
    1191477346,
    -176230385,
  ],
}
`;

exports[`Combined Video/Audio sync 2`] = `
Sha256 {
  "_a": 670676573,
  "_b": -1151823456,
  "_block": {
    "data": [
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
      170,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1677237509,
  "_d": -460357308,
  "_e": 1551483560,
  "_f": 1388096355,
  "_finalSize": 56,
  "_g": -935003252,
  "_h": -190420719,
  "_len": 1261485,
  "_w": [
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    -1431655766,
    1076538024,
    1076538024,
    1074864824,
    1074864824,
    -182768576,
    -182768576,
    865411811,
    -921361695,
    178330348,
    176492780,
    -2087738290,
    -1260804374,
    -1325468685,
    -1334857003,
    102107665,
    -694727818,
    19526121,
    1086749015,
    -337589627,
    955973414,
    1980563049,
    -1537712342,
    2098823597,
    -1902999238,
    -639461841,
    1885657292,
    -2135474814,
    1875715073,
    545314243,
    74402475,
    714922509,
    -1428617055,
    -1599539767,
    -1963544693,
    -1261772506,
    -1085687255,
    -48227931,
    -291123254,
    -28480751,
    1852269705,
    512616480,
    1584719614,
    -818213677,
    331778726,
    2065100065,
    -1069164473,
    1482002331,
    -626515563,
  ],
}
`;

exports[`Video only 144p 1`] = `
Sha256 {
  "_a": 597891749,
  "_b": 195808211,
  "_block": {
    "data": [
      0,
      0,
      8,
      1,
      158,
      8,
      212,
      151,
      255,
      1,
      149,
      0,
      0,
      0,
      8,
      1,
      158,
      10,
      212,
      151,
      255,
      1,
      149,
      0,
      0,
      0,
      14,
      65,
      154,
      16,
      147,
      194,
      30,
      76,
      166,
      4,
      191,
      0,
      0,
      139,
      129,
      0,
      0,
      0,
      8,
      1,
      158,
      46,
      212,
      151,
      255,
      1,
      149,
      194,
      30,
      76,
      166,
      4,
      79,
      0,
      0,
      17,
      241,
      0,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1141904252,
  "_d": -500331964,
  "_e": -793230487,
  "_f": -1496412488,
  "_finalSize": 56,
  "_g": 1807984117,
  "_h": -344299385,
  "_len": 4323893,
  "_w": [
    -2138080512,
    3649,
    -1681484862,
    508339716,
    1602682889,
    -1744830464,
    134324194,
    -728236287,
    -1795162112,
    134324196,
    -728236287,
    -1795162112,
    239180780,
    -1815994804,
    -1509667072,
    1175808,
    -1200938103,
    -839382170,
    1222021073,
    180927761,
    -1686504153,
    706025429,
    -1340008759,
    -911737641,
    -1150081926,
    966215944,
    -376981648,
    1028992812,
    1922014948,
    2091690591,
    681606798,
    1218473103,
    -107173904,
    -71084283,
    1500284987,
    1640315073,
    -669579633,
    1324126451,
    -1510746070,
    -926988687,
    326352902,
    -267876419,
    -143718330,
    -1987089887,
    -1030897245,
    -2114069063,
    1457233606,
    -2003021791,
    1738676668,
    -184889376,
    -206061801,
    664112526,
    1307010830,
    -716793891,
    -1189043378,
    -943030985,
    -1839345284,
    -1512066278,
    -94080040,
    922392059,
    1674605909,
    -1254812319,
    -1731602929,
    897573378,
  ],
}
`;

exports[`Video only 144p 2`] = `
Sha256 {
  "_a": 597891749,
  "_b": 195808211,
  "_block": {
    "data": [
      0,
      0,
      8,
      1,
      158,
      8,
      212,
      151,
      255,
      1,
      149,
      0,
      0,
      0,
      8,
      1,
      158,
      10,
      212,
      151,
      255,
      1,
      149,
      0,
      0,
      0,
      14,
      65,
      154,
      16,
      147,
      194,
      30,
      76,
      166,
      4,
      191,
      0,
      0,
      139,
      129,
      0,
      0,
      0,
      8,
      1,
      158,
      46,
      212,
      151,
      255,
      1,
      149,
      194,
      30,
      76,
      166,
      4,
      79,
      0,
      0,
      17,
      241,
      0,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1141904252,
  "_d": -500331964,
  "_e": -793230487,
  "_f": -1496412488,
  "_finalSize": 56,
  "_g": 1807984117,
  "_h": -344299385,
  "_len": 4323893,
  "_w": [
    -2138080512,
    3649,
    -1681484862,
    508339716,
    1602682889,
    -1744830464,
    134324194,
    -728236287,
    -1795162112,
    134324196,
    -728236287,
    -1795162112,
    239180780,
    -1815994804,
    -1509667072,
    1175808,
    -1200938103,
    -839382170,
    1222021073,
    180927761,
    -1686504153,
    706025429,
    -1340008759,
    -911737641,
    -1150081926,
    966215944,
    -376981648,
    1028992812,
    1922014948,
    2091690591,
    681606798,
    1218473103,
    -107173904,
    -71084283,
    1500284987,
    1640315073,
    -669579633,
    1324126451,
    -1510746070,
    -926988687,
    326352902,
    -267876419,
    -143718330,
    -1987089887,
    -1030897245,
    -2114069063,
    1457233606,
    -2003021791,
    1738676668,
    -184889376,
    -206061801,
    664112526,
    1307010830,
    -716793891,
    -1189043378,
    -943030985,
    -1839345284,
    -1512066278,
    -94080040,
    922392059,
    1674605909,
    -1254812319,
    -1731602929,
    897573378,
  ],
}
`;

exports[`Video only 240p 1`] = `
Sha256 {
  "_a": 36970632,
  "_b": -602601389,
  "_block": {
    "data": [
      147,
      194,
      30,
      76,
      166,
      4,
      127,
      243,
      32,
      0,
      0,
      63,
      193,
      0,
      0,
      0,
      10,
      1,
      159,
      46,
      212,
      143,
      255,
      0,
      0,
      53,
      96,
      26,
      177,
      0,
      0,
      0,
      10,
      1,
      159,
      8,
      212,
      143,
      255,
      0,
      0,
      53,
      97,
      0,
      0,
      0,
      10,
      1,
      159,
      10,
      212,
      143,
      255,
      0,
      0,
      53,
      97,
      0,
      0,
      0,
      16,
      65,
      155,
      16,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 2051050812,
  "_d": -989575290,
  "_e": -1030417633,
  "_f": -2085279568,
  "_finalSize": 56,
  "_g": 247689248,
  "_h": -1997598375,
  "_len": 9323483,
  "_w": [
    -455831553,
    13664,
    17,
    1100672147,
    -1038201690,
    69730298,
    1476395034,
    -1325400064,
    167878408,
    -728760576,
    3498240,
    2561,
    -1626680177,
    -16777163,
    1627389952,
    272734992,
    -2032856475,
    556265648,
    -1057715917,
    -1378196489,
    -1574952150,
    579660747,
    -1789111098,
    -1761633551,
    -1325321211,
    734958952,
    1799238968,
    -198133408,
    298661781,
    -320875029,
    2049484999,
    1896150259,
    -1940637178,
    -818592368,
    -1314727664,
    331103076,
    1869376373,
    -1035956065,
    -696290098,
    -838621461,
    1165356342,
    1980509346,
    -1151503523,
    1567986831,
    724714478,
    -408879635,
    -2018855081,
    704714085,
    2027827753,
    -1279616022,
    -1292759412,
    1535209153,
    -1582022488,
    1055544528,
    -791661505,
    -951500174,
    1457631213,
    -1559257435,
    1765092042,
    -2052841106,
    -1836911262,
    1599934472,
    -42262661,
    2086001769,
  ],
}
`;

exports[`Video only 360p 1`] = `
Sha256 {
  "_a": 915376368,
  "_b": 915197832,
  "_block": {
    "data": [
      76,
      166,
      4,
      127,
      243,
      32,
      0,
      0,
      3,
      0,
      0,
      7,
      165,
      0,
      0,
      0,
      13,
      1,
      159,
      142,
      212,
      143,
      255,
      0,
      0,
      3,
      0,
      0,
      6,
      92,
      0,
      0,
      3,
      0,
      0,
      6,
      93,
      0,
      0,
      0,
      13,
      1,
      159,
      106,
      212,
      143,
      255,
      0,
      0,
      3,
      0,
      0,
      6,
      93,
      0,
      0,
      0,
      19,
      65,
      155,
      112,
      147,
      194,
      30,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 878663491,
  "_d": -1092328711,
  "_e": 166199391,
  "_f": -2011205169,
  "_finalSize": 56,
  "_g": -401793777,
  "_h": -1501170657,
  "_len": 18294110,
  "_w": [
    -1689480254,
    508339716,
    671087192,
    768,
    197423,
    13,
    27224276,
    -1879113728,
    50331654,
    1560281088,
    218210154,
    -728760576,
    196608,
    106758144,
    1261979,
    1888731678,
    -473988420,
    247800153,
    780205062,
    -749551275,
    -2115258913,
    -1429365561,
    -276319466,
    -34105644,
    1286702206,
    2003913785,
    -1208944213,
    -1509792796,
    1332021654,
    1508935971,
    -429272210,
    -1744258499,
    715616858,
    1203908103,
    764011329,
    -1210857433,
    -1495412191,
    190614779,
    788390046,
    -1802502721,
    265926433,
    641949149,
    -1565428857,
    2035603003,
    1646413357,
    814563527,
    763610914,
    502331499,
    2053051427,
    1290639314,
    -1157221763,
    -1240151239,
    -1961973592,
    2002553220,
    1630107076,
    319503045,
    1526590063,
    595271103,
    -309713575,
    -1194361159,
    134019176,
    -1837071562,
    258422695,
    1467981893,
  ],
}
`;

exports[`Video only 360p 2`] = `
Sha256 {
  "_a": 1779033703,
  "_b": 3144134277,
  "_block": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1013904242,
  "_d": 2773480762,
  "_e": 1359893119,
  "_f": 2600822924,
  "_finalSize": 56,
  "_g": 528734635,
  "_h": 1541459225,
  "_len": 0,
  "_w": [
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    1431655765,
    -1609214636,
    -1609214636,
    -1607941796,
    -1607941796,
    414043680,
    414043680,
    -19782609,
    1234314286,
    1097708600,
    1096021368,
    1465835516,
    -413403832,
    393015229,
    -844003180,
    2120859960,
    1950762142,
    -1574593190,
    2135456813,
    -1580882824,
    433018846,
    2108125402,
    -1588172068,
    -1507036111,
    -109653929,
    2070177348,
    -621581400,
    -1583705034,
    -2134428910,
    595697251,
    53023419,
    404586609,
    1628120751,
    929460766,
    -1528674682,
    -2067018124,
    277148752,
    1468378495,
    144692897,
    1862731056,
    -529588229,
    309224842,
    -1468554783,
    -1435623010,
    -1562126978,
    868565422,
    -2087181620,
    -1664910832,
    782127982,
  ],
}
`;

exports[`Video only 480p 1`] = `
Sha256 {
  "_a": -1144402774,
  "_b": -266742435,
  "_block": {
    "data": [
      76,
      166,
      4,
      127,
      243,
      32,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      1,
      255,
      0,
      0,
      0,
      18,
      1,
      159,
      46,
      212,
      143,
      255,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      1,
      171,
      143,
      255,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      1,
      171,
      0,
      0,
      0,
      24,
      65,
      155,
      16,
      147,
      194,
      30,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1411857239,
  "_d": 394678209,
  "_e": -735003975,
  "_f": -1352791565,
  "_finalSize": 56,
  "_g": -340687455,
  "_h": -329173451,
  "_len": 28207144,
  "_w": [
    768,
    196608,
    -712966144,
    1180063,
    148148223,
    768,
    196608,
    50332075,
    18,
    27200212,
    -1879113728,
    50331651,
    768,
    27983872,
    1589659,
    278118942,
    -358721037,
    -2073688565,
    2128860097,
    -1595102542,
    -1631143746,
    -2143295012,
    -233656279,
    462994306,
    -48682708,
    -1675967195,
    -388033833,
    -594004890,
    -1417584138,
    917257393,
    -2024457752,
    342494976,
    1219007226,
    763104644,
    312292292,
    -1800218991,
    1753334951,
    453052447,
    184473899,
    358491471,
    -868639634,
    -79503682,
    1448025382,
    439021480,
    -1623626110,
    -76495006,
    -1194343877,
    893549477,
    1811184954,
    -1124192263,
    1644430170,
    956431547,
    1696820766,
    1989569121,
    820627826,
    481871431,
    1006932284,
    1516244511,
    1386397991,
    -744278776,
    968100950,
    -1185761748,
    795067972,
    -433280593,
  ],
}
`;

exports[`Video only 720p 1`] = `
Sha256 {
  "_a": -1539314270,
  "_b": -1162196552,
  "_block": {
    "data": [
      0,
      38,
      224,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      38,
      224,
      0,
      0,
      0,
      33,
      1,
      158,
      224,
      212,
      134,
      255,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 1876231004,
  "_d": -155253442,
  "_e": -1513796391,
  "_f": 636626653,
  "_finalSize": 56,
  "_g": -1002782650,
  "_h": 1141031966,
  "_len": 150524867,
  "_w": [
    -729350400,
    196608,
    50331651,
    768,
    196608,
    50331651,
    768,
    652214272,
    2163102,
    -522942721,
    768,
    196608,
    50331651,
    768,
    196608,
    50331651,
    1432087744,
    107668896,
    -1884260506,
    -244972988,
    1004944883,
    -988168312,
    -522530885,
    -526120136,
    117662698,
    -167230449,
    -1896878339,
    1829471879,
    -748909246,
    1415795328,
    -1102335778,
    1044020077,
    -211233868,
    -916432689,
    -2018808849,
    1518770764,
    -809459659,
    -99447687,
    -765400400,
    -139521714,
    1221430666,
    -102350691,
    1136108548,
    -506659456,
    -762963988,
    1317972984,
    -1030059817,
    1258261822,
    -1826746883,
    1497639638,
    1716842170,
    396316526,
    1485521179,
    1280388186,
    761421650,
    -1116908595,
    -1153286443,
    1306258635,
    -695211024,
    207024827,
    2067657277,
    954110484,
    1574262315,
    197333574,
  ],
}
`;

exports[`Video only 1080p 1`] = `
Sha256 {
  "_a": -1898089531,
  "_b": 555344630,
  "_block": {
    "data": [
      3,
      0,
      0,
      21,
      48,
      1,
      159,
      64,
      212,
      134,
      255,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
      3,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": -2098887860,
  "_d": 757068674,
  "_e": 1908617324,
  "_f": -1377948365,
  "_finalSize": 56,
  "_g": -27666285,
  "_h": -752952503,
  "_len": 257619653,
  "_w": [
    805306368,
    1073848128,
    -729350400,
    196608,
    50331651,
    768,
    196608,
    50331651,
    768,
    196608,
    50331651,
    768,
    196608,
    50331651,
    768,
    196608,
    556998870,
    -939817149,
    -1996423049,
    -1176164701,
    -1495828916,
    -139706745,
    1546859308,
    -1113452693,
    -2015323754,
    -706575587,
    494768694,
    2024802361,
    2037420476,
    1694036705,
    -660969443,
    1332397196,
    -286159921,
    -563261776,
    272515156,
    -1844178537,
    313528571,
    -82215937,
    -115725987,
    1525208036,
    970575239,
    1691463115,
    251130028,
    -1034292971,
    1840840603,
    -548340914,
    871993367,
    -852616095,
    2007367761,
    -181959530,
    -874840924,
    587179418,
    -765462080,
    -2079324642,
    -1052309575,
    1353035549,
    -2093077699,
    957212645,
    1381782030,
    -398124779,
    1302496117,
    474442063,
    -208759816,
    -704277006,
  ],
}
`;

exports[`Video only 1440p 1`] = `
Sha256 {
  "_a": -1558570509,
  "_b": -1334008778,
  "_block": {
    "data": [
      96,
      32,
      0,
      0,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      0,
      0,
      0,
      3,
      62,
      9,
      160,
      62,
      9,
      160,
      65,
      10,
      156,
      0,
      74,
      225,
      192,
      0,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": 45474140,
  "_d": -1006082200,
  "_e": 1919212595,
  "_f": 963366437,
  "_finalSize": 56,
  "_g": -914392704,
  "_h": 1163662312,
  "_len": 473363704,
  "_w": [
    1040818176,
    830,
    161480704,
    212489,
    -1610612736,
    54397344,
    3,
    1040818176,
    830,
    161480704,
    212489,
    -1606547040,
    -1547271935,
    1023444480,
    1091214336,
    1256308736,
    -502691228,
    -650307573,
    2074516100,
    -398671863,
    1024892649,
    1116285897,
    1464198483,
    1299174948,
    679112164,
    1955508528,
    984883939,
    594998742,
    -1580391846,
    -398275915,
    1033032435,
    1722720857,
    -732428063,
    982642596,
    -481496435,
    -963325335,
    -592482275,
    1215782937,
    -923976707,
    -737402005,
    1609865748,
    -1218160128,
    -184153606,
    -1870622537,
    1958317799,
    1628361157,
    518013354,
    1417764762,
    -378378196,
    -288376436,
    -323159395,
    1665565288,
    58521527,
    -1523802783,
    -930102357,
    -1602705866,
    1767473267,
    1431002916,
    -1583934624,
    -64414920,
    -1200820899,
    535711829,
    342103116,
    2130332468,
  ],
}
`;

exports[`Video only 2160p 1`] = `
Sha256 {
  "_a": 366936912,
  "_b": -2059210597,
  "_block": {
    "data": [
      68,
      146,
      130,
      0,
      0,
      0,
      3,
      68,
      144,
      232,
      0,
      0,
      0,
      3,
      68,
      146,
      130,
      0,
      0,
      0,
      3,
      68,
      144,
      232,
      0,
      0,
      0,
      3,
      68,
      146,
      130,
      0,
      0,
      0,
      3,
      68,
      144,
      232,
      68,
      146,
      130,
      65,
      10,
      156,
      0,
      70,
      97,
      192,
      0,
      96,
      32,
      0,
      0,
      0,
      0,
      0,
      3,
      68,
      144,
      232,
      0,
      0,
      0,
      3,
    ],
    "type": "Buffer",
  },
  "_blockSize": 64,
  "_c": -414384841,
  "_d": 223126774,
  "_e": -2044611850,
  "_f": -278044585,
  "_finalSize": 56,
  "_g": 1249412164,
  "_h": -624021476,
  "_len": 1362269481,
  "_w": [
    -1863843840,
    214162,
    -2113929216,
    54825192,
    3,
    1150452224,
    836,
    -1863826286,
    -2103196031,
    20775046,
    4262556,
    4612544,
    6299648,
    0,
    54825192,
    3,
    1639169935,
    294277038,
    516468141,
    2009864527,
    -335543559,
    1614526831,
    657541864,
    -2129676534,
    1817398201,
    -939940652,
    1563817030,
    -619434373,
    -1520926288,
    -1370899784,
    -618915815,
    1401611553,
    -2032119978,
    259024989,
    -1098723633,
    1160908965,
    360193572,
    197220935,
    1886474217,
    1008087074,
    -501271384,
    1587810773,
    111954626,
    -790527356,
    1737380920,
    1052091041,
    -380419478,
    1220122745,
    1353616517,
    1348274736,
    -315624787,
    504860906,
    895757471,
    -1097269924,
    485389016,
    1855785922,
    -825683202,
    113193671,
    1123266578,
    1857112883,
    21411867,
    15401202,
    -2137583262,
    -1686110527,
  ],
}
`;
